# hpc-nemo

./: .diarize.py.swp  .gitignore  7b.modelfile  DiarizePipeline.py  README.md  anonymise_transcript.py  calculate_wer.py  diarize.py  diarize.sh  diarize_batch.py  diarize_parallel.py  diarize_parallel.sh  diarize_test.err  diarize_test.out  diarize_test.sh  env.yaml  get_diar_errs.py  helpers.py  install_ollama.sh  load_modules.sh  nemo_process.py  new.modelfile  nohup.out  original_diarize_batch.py  pyproject.toml  requirements.txt  slurm_env.sh
diarization/msdd/: msdd.py
wer/: calculate_wer.py
wer_calculations/: preprocess_transcripts.py
